web/src/components/document/Document.scss
.title {
   margin: 10px;

   & textarea {
      overflow: hidden;
      white-space: nowrap;
      padding-right: 10px;
      padding-left: 5px;
      border: none;
      outline: none;
      border-color: transparent; 
      resize: none;
      width: 100%;
      background: transparent;
      font-size: x-large;
      font-weight: bold;

      &:focus {
         outline: none;
         background-color: lightgray;
      }
   }
}

.controls {
   display: flex;
   flex-direction: row;
   justify-content: space-between;

   .viewers {
      display: flex;
      flex-direction: row-reverse;
   }
   
   .actions {
      display: flex;
      flex-direction: row;
      margin-left: 20px;

      button {
         background-color: darkslateblue;
         color: white;
         border: none;
         padding: 0px 20px;
         margin: auto 2px;
         height: 48px;
         text-align: center;
         text-decoration: none;
         font-size: 16px;
         display: inline-block;
         font-weight: bold;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;

         &:hover {
            background-color: lighten(darkslateblue, 15%);
         }

         &:active {
            background-color: lighten(darkslateblue, 25%);
         }
      }
   }
}


.content {
   overflow: auto;
   overflow-y: auto;
   height: 70vh;
   margin: 10px;
   border-style: ridge;
   border-width: 2px;
   border-color: black;
   border-radius: 3px;
   background-color: lightgrey;

   .content-line {
      background-color: white;
      display: flex;
      align-items: flex-start;
      justify-content: center;

      &.line-selected {
         background-color: lightgrey;
      }

      .content-index {
         width: 40px;
         height: 21px;
         text-align: end;
         border-right: 2px solid #404040;
      }

      textarea {
         overflow: hidden;
         white-space: nowrap;
         padding-right: 10px;
         padding-left: 5px;
         border: none;
         outline: none;
         border-color: transparent; 
         resize: none;
         width: 100%;
         background: transparent;

         &:focus {
            outline: none;
         }
      }

      &:last-child {
         border-bottom: 2px solid #404040;
      }
   }
}

